<resources>
    <string name="app_name">InFamily</string>
    <string name="error_network">Error with your connection</string>
    <string name="error_response">Response Error</string>
    <string name="main_category1">Хотите стать приемными родителями?</string>
    <string name="main_category2">О Приемных Детях</string>
    <string name="main_category3">Вы Являетесь приемным родителем</string>
    <string name="main_category4">Список специалистов</string>
    <string name="tab_title_1">ФОСТЕРНОЕ ОПЕКУНСТВО</string>
    <string name="tab_title_2">УСЫНОВЛЕНИЕ</string>
    <string name="tab_title_3">ОПЕКУНСТВО И ПОПЕЧИТЕЛЬСТВО</string>
    <string name="normal_result">Вы готовы стать приемным родителем </string>
    <string name="excellent_result">Вы идеально подходите на роль родителя/опекуна </string>
    <string name="bad_result"> Рекомендуем обсудить вопросы данного теста со специалистом (психологом, соц.работником, опытными приёмными родителями)</string>
    <string name="congratulations">Поздравляем !</string>
    <string name="normal">Хороший Результат !</string>
    <string name="login">Логин</string>
    <string name="registration">Регистрация</string>
    <string name="mail">Почта</string>
    <string name="phone">Телефон</string>
    <string name="error_login">Имя должно содержать не менее 4 символов</string>
    <string name="error_mail">Введите корректный адрес почты</string>
    <string name="error_phone">Введите корректный номер телефона</string>
    <string name="success_registration">Регистрация прошла успешно</string>
    <string name="ok">Продолжить</string>
    <string name="no_internet">Нет соединения с сервером</string>
    <string name="send_application">Отправить заявку</string>
    <string name="success_application">Заявка успешно отправлена</string>
    <string name="failure_application">Не удалось соединиться с сервером</string>
    <string name="retry">Повторить</string>
    <string name="fill">Заполните все поля</string>
    <string name="server_status">Статус сервера</string>
    <string name="status_tryagain">Ваша заявка находится на стадии расмотра.</string>
    <string name="status1">Вы уже отправили заявку, В данное время заявка находится в очереди на рассмотрение</string>
    <string name="status3">Ваша заявка в текущее время находится на проверке администрацией</string>
    <string name="status4">Ваша заявка была рассмотрена и требует переотправки некоторых документов.</string>
    <string name="status5">Ваша заявка успешно принята. С вами в ближайшее время свяжутся специалисты.</string>
    <string name="update">Обновить заявку</string>
    <string name="success_update">Ваша заяква успешно обновлена</string>
    <string name="tab_text1"> Опекунами и попечителями могут назначаться только совершеннолетние дееспособные лица.
        7. Опекунами и попечителями лиц, нуждающихся в установлении опеки и попечительства, не могут быть лица:
        - страдающие "лудоманией" или зависимые от азартных игр, ограниченные судом в дееспособности;
        - отстраненные от выполнения обязанностей опекунов и попечителей;
        - ограниченные в родительских правах, лишенные родительских прав, бывшие усыновители, если усыновление отменено по их вине;
        - лица, которые по состоянию здоровья не могут осуществлять обязанности по воспитанию несовершеннолетнего, согласно утвержденному Правительством Кыргызской Республики перечню заболеваний;
        - имеющие не снятую или не погашенную в установленном законодательством порядке судимость.
        Опека и попечительство устанавливаются для защиты прав и интересов недееспособных или ограниченных в дееспособности граждан. Опека и попечительство над несовершеннолетними устанавливаются также в целях их воспитания.
        Разница в возрасте между опекуном (попечителем) и несовершеннолетним не может быть менее 16 лет.
        При назначении опекуна или попечителя в отношении несовершеннолетнего учитываются нравственные и иные личные качества опекуна и попечителя, способность его к выполнению обязанностей опекуна и попечителя, отношения между опекуном, попечителем и ребенком, отношение к несовершеннолетнему членов семьи опекуна и попечителя, а также, если это возможно, желание самого несовершеннолетнего.
        (В редакции постановления Правительства КР от 22 мая 2014 года № 270)
        8. Лица, желающие быть опекунами и попечителями несовершеннолетних, обращаются в территориальное подразделение с заявлением (приложение 1) и приложением следующих документов:
        1) копия паспорта (или иной удостоверяющий личность документ);
        2) копия свидетельства о браке (если состоят в браке);
        3) нотариально заверенное согласие супруга на опеку или попечительство (если состоят в браке);
        4) справка с места жительства о составе семьи;
        5) справка органов внутренних дел об отсутствии, снятии или погашении судимости;
        6) документ, подтверждающий наличие постоянного источника доходов семьи (справка с места работы, с указанием должности и заработной платы, копия декларации о доходах от предпринимательской деятельности, справка исполнительных органов местного самоуправления о наличии земельной доли, живности и других активов в собственности крестьянского хозяйства);
        7) медицинское заключение государственной лечебно-профилактической и медико-социальной организации о состоянии здоровья лица, желающего быть опекуном (приложение 2), и членов его семьи об отсутствии заболеваний, согласно Перечню, определяемому Правительством Кыргызской Республики, при наличии которых лицо не может быть признано приемным родителем, опекуном или попечителем;
        8) характеристика с места работы либо с места жительства;
        9) полная автобиография заявителя.
        Документы, перечисленные в подпунктах 3-8 настоящего пункта, действительны для рассмотрения их территориальным подразделением в течение шести месяцев со дня их выдачи.</string>
</resources>