<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/main_rectangle">
    <TextView
        android:text="@string/server_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/tvStatusText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_margin="8dp"
        tools:text="@string/status_tryagain"/>
    <Button
        android:id="@+id/btnOK"
        android:layout_margin="32dp"
        android:textSize="12sp"
        android:text="@string/ok"
        android:textColor="@android:color/black"
        android:background="@drawable/main_rectangle"
        android:layout_width="match_parent"
        android:layout_height="30dp" />
</LinearLayout>