<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main_sections.become_parent.information.InformationActivity"
    android:orientation="vertical"

    >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:elevation="0dp"
        android:id="@+id/appBarId"

        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/scientist"
            />
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="fill"
            app:tabMode="fixed"
            android:id="@+id/tabLayout_id"
            app:tabTextColor="@color/tabLayoutText"
            app:tabIndicatorColor="@color/tabIndicatorColor"
            android:background="@color/colorPrimary"
            >
        <android.support.design.widget.TabItem
            android:id="@+id/tabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_title_1" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_title_2" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_title_3" />



    </android.support.design.widget.TabLayout>
        <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/view_pager_id"
            >
        </android.support.v4.view.ViewPager>


</LinearLayout>