<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_rectangle"
    android:orientation="vertical">

    <TextView
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:layout_margin="16dp"
        android:text="@string/registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        app:errorTextAppearance="@style/error_appearance"
        android:layout_margin="8dp"
        android:textColorHint="@color/colorPrimary"
        android:id="@+id/input_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:textColor="@android:color/black"
            android:id="@+id/etLogin"
            android:padding="16dp"
            android:inputType="textPersonName"
            android:layout_marginLeft="24dp"
            android:hint="@string/login"
            android:textColorHint="@color/colorPrimary"
            android:layout_marginRight="24dp"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        app:errorTextAppearance="@style/error_appearance"
        android:layout_margin="8dp"
        android:textColorHint="@color/colorPrimary"
        android:id="@+id/input_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etMail"
            android:padding="16dp"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="24dp"
            android:hint="@string/mail"
            android:textColor="@android:color/black"
            android:layout_marginRight="24dp"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        app:errorTextAppearance="@style/error_appearance"
        android:layout_margin="8dp"
        android:textColorHint="@color/colorPrimary"
        android:id="@+id/input_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:textColor="@android:color/black"
            android:id="@+id/etPhone"
            android:inputType="number"
            android:padding="16dp"
            android:layout_marginLeft="24dp"
            android:hint="@string/phone"
            android:layout_marginRight="24dp"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_registration"
        android:textColor="@android:color/black"
        android:text="@string/registration"
        android:background="@drawable/main_rectangle"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>